--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FsFirstTemplate" />
+        android:theme="@style/Theme.FsFirstTemplate">
+        <activity
+            android:name=".view.base.BaseActivity"
+            android:exported="false" />
+    </application>
 
 </manifest>
