--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 .gradle
 /local.properties
 /.idea
-.idea/misc.xml
+/.idea/misc.xml
+/.idea/gradle.xml
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
