--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
 *.iml
+*.jks
 .gradle
 /local.properties
-/.idea
-/.idea/misc.xml
-/.idea/gradle.xml
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
+.idea
 .externalNativeBuild
-.cxx
-local.properties
+/app/build
+/app/real
